--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,10 @@ streamlit==1.29.0
 pandas==2.1.4
 plotly==5.17.0
 
+# AI/LLM Dependencies
+google-generativeai==0.3.2
+python-dotenv==1.0.0
+
 # Dependencies of core packages (automatically installed)
 # numpy==1.24.3  # installed with pandas
 # python-dateutil==2.8.2  # installed with pandas
